# flightsimgame

./: AERODYNAMIC_IMPROVEMENTS.md  CMakeLists.txt  README.md  settings.cfg
include/: Aircraft.h  AudioManager.h  Camera.h  Game.h  InputManager.h  LoadingScreen.h  MenuSystem.h  Physics.h  Renderer.h  SettingsManager.h  Sky.h  Terrain.h  Types.h
src/: Aircraft.cpp  AudioManager.cpp  Camera.cpp  Game.cpp  InputManager.cpp  LoadingScreen.cpp  MenuSystem.cpp  Physics.cpp  Renderer.cpp  SettingsManager.cpp  Sky.cpp  Terrain.cpp  main.cpp
